bit:drag:image - fixed gap bottom of image

--- a/meteor-app/client/components/bits/base/styles.scss
+++ b/meteor-app/client/components/bits/base/styles.scss
@@ -224,7 +224,8 @@
 
 // ******************** IMAGE BITS *************
 
-.bit.image img {
+.bit__image {
+  display: block;
   @extend .grabbable;
 }
 
